--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             <button>Destinos Internacionales</button>
             <button>Cruceros</button>
         </div>
+        <script src="app.js"></script> 
     </header>
+    
     <h1 class="titulo">Paquete Turístico Punta Cana 5 días/4 noches</h1>
     <div class="container">
         <div class="contenido">
@@ -24,7 +26,7 @@
                 <p>- Sistema de alimentación All-inclusive.</p>
                 <p>- Tarjeta de asistencia.</p>
             </div>
-            <img src="punta cana.png" alt="Imagen Grande" class="imagen-grande">
+            <img src="punta cana.png" alt="Imagen Grande" class="imagen-grande" alt="" width="200">
         </div>
         <div class="container">
             <div class="contenido">
@@ -36,8 +38,10 @@
                     <p>- Nickelodeon Punta Cana.</p>
                     <p>- Occidental Caribe.</p>
                 </div>
-                <img src="hotel.jpg" alt="Imagen Grande" class="imagen-grande">
+                <img src="hotel.jpg" alt="Imagen Grande" class="imagen-hotel" alt="" width="200">
             </div>
+        <hr>
+
             <div class="botones">
                 <button>Destinos Nacionales</button>
                 <button>Destinos Internacionales</button>
