--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paquete</title>
     <link rel="stylesheet" href="style.css">
+    <script src="class07.js"></script> 
     <header>
         <img src="logoo.png" alt="Logo">
         <div class="buttons">
@@ -12,7 +13,6 @@
             <button>Destinos Internacionales</button>
             <button>Cruceros</button>
         </div>
-        <script src="app.js"></script> 
     </header>
     
     <h1 class="titulo">Paquete Turístico Punta Cana 5 días/4 noches</h1>
